[project]
name = "sphinx-helm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "docutils>=0.21.2",
    "jinja2>=3.1.4",
    "ruamel-yaml>=0.18.6",
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-click>=6.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "sphinx_helm/_version.py"
